--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#A3E7E7F6</color>
+    <color name="purple">#48319D</color>
+    <color name="darkPurple">#2E335A</color>
+    <color name="offWhite">#F5F5F9</color>
 </resources>
