--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/starry_mountain"
-    tools:context=".favoritePage.MapActivity">
+    tools:context=".favoritePage.view.MapActivity">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
