--- a/app/src/main/res/layout/favorite_cell.xml
+++ b/app/src/main/res/layout/favorite_cell.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -26,8 +27,9 @@
         android:text="Ismailia"
         android:textColor="@color/white"
         android:textSize="20sp"
+        android:maxWidth="200dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         app:layout_constraintBottom_toBottomOf="@id/imageView"
         app:layout_constraintStart_toStartOf="@id/imageView"
          />
@@ -47,20 +49,20 @@
         android:layout_height="wrap_content"
         android:text="L:14"
         android:textColor="@color/grey"
-        app:layout_constraintEnd_toEndOf="@id/country_name"
-        app:layout_constraintBottom_toTopOf="@id/country_name"/>
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toTopOf="@id/country_name"
+        app:layout_constraintStart_toEndOf="@+id/high_temp" />
 
     <TextView
         android:id="@+id/temp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:text="20"
         android:textColor="@color/white"
-        android:textSize="60sp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintStart_toStartOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView" />
+        android:textSize="48sp"
+        app:layout_constraintBottom_toTopOf="@+id/high_temp"
+        app:layout_constraintStart_toStartOf="@id/imageView" />
 
     <TextView
         android:id="@+id/weather_desc"
@@ -76,6 +78,7 @@
         />
 
     <ImageView
+        android:id="@+id/weather_icon"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/cloud_rain"
