--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="purple">#48319D</color>
     <color name="darkPurple">#2E335A</color>
     <color name="offWhite">#F5F5F9</color>
+    <color name="whitePurple">#9494E8</color>
 </resources>
