--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,26 +49,117 @@
         android:layout_width="match_parent"
         android:layout_height="340dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="-120dp"
         android:src="@drawable/house"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_sheet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/total_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="800dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/temp_desc"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:background="@drawable/image"-->
+<!--        >-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/hourly_forecast"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="40dp"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:text="@string/hourly_forecast"-->
+<!--            android:textColor="@color/grey"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/total_layout"-->
+<!--             />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/daily_forecast"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_marginEnd="40dp"-->
+<!--            android:text="@string/daily_forecast"-->
+<!--            android:textColor="@color/grey"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/total_layout" />-->
+
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/hourly_recyclerView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="160dp"-->
+<!--            android:layout_marginTop="48dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:layout_marginBottom="100dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.49"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/total_layout"-->
+<!--            app:layout_constraintVertical_bias="1.0"-->
+<!--            tools:itemCount="20"-->
+<!--            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--            tools:listitem="@layout/hourly_cell" />-->
+
+
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/daily_recyclerView"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="160dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_marginBottom="100dp"-->
+<!--            android:layout_marginTop="48dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.49"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/total_layout"-->
+<!--            app:layout_constraintVertical_bias="1.0"-->
+<!--            tools:itemCount="20"-->
+<!--            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--            tools:listitem="@layout/hourly_cell" />-->
+
+
+<!--        <ImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/rectangle_3"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/total_layout" />-->
+
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="324dp"
+        android:layout_height="572dp"
+        android:layout_marginBottom="-260dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        >
 
         <ImageView
             android:id="@+id/details_image_view"
             android:layout_width="match_parent"
-            android:layout_height="483dp"
+            android:layout_height="672dp"
             android:scaleType="fitXY"
-            android:src="@drawable/properity"
+            android:src="@drawable/image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,11 +170,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:text="@string/hourly_forecast"
             android:textColor="@color/grey"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/hourly_recyclerView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/details_image_view" />
 
@@ -91,12 +181,11 @@
             android:id="@+id/daily_forecast"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="40dp"
             android:text="@string/daily_forecast"
             android:textColor="@color/grey"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/hourly_recyclerView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/details_image_view" />
 
@@ -109,7 +198,7 @@
             android:layout_marginEnd="8dp"
             android:orientation="horizontal"
             android:layout_marginBottom="100dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,8 +216,8 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="100dp"
+            android:layout_marginTop="60dp"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,6 +236,163 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/details_image_view" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:visibility="gone"
+            android:layout_marginTop="12dp"
+            android:id="@+id/data_layout"
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            app:layout_constraintTop_toBottomOf="@id/daily_recyclerView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/verticalGuideline1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.25" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/verticalGuideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.5" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/verticalGuideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.75" />
+            <ImageView
+                android:id="@+id/humidity_image"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/verticalGuideline1"
+                android:src="@drawable/humidity"/>
+            <TextView
+                android:id="@+id/humidity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22"
+                android:textColor="@color/offWhite"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/humidity_image"
+                app:layout_constraintStart_toStartOf="@id/humidity_image"
+                app:layout_constraintEnd_toEndOf="@id/humidity_image"
+                />
+            <TextView
+                android:id="@+id/humidity_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/humidity_image"
+                app:layout_constraintEnd_toEndOf="@id/humidity_image"
+                app:layout_constraintTop_toBottomOf="@id/humidity"
+                android:text="Humidity"
+                android:textSize="16sp"
+                android:textColor="@color/offWhite"/>
+
+            <ImageView
+                android:id="@+id/wind_speed_image"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/verticalGuideline2"
+                app:layout_constraintStart_toStartOf="@id/verticalGuideline1"
+                android:src="@drawable/windspeed"/>
+            <TextView
+                android:id="@+id/wind_speed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22"
+                android:textColor="@color/offWhite"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/wind_speed_image"
+                app:layout_constraintStart_toStartOf="@id/wind_speed_image"
+                app:layout_constraintEnd_toEndOf="@id/wind_speed_image"
+                />
+            <TextView
+                android:id="@+id/wind_speed_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/wind_speed_image"
+                app:layout_constraintEnd_toEndOf="@id/wind_speed_image"
+                app:layout_constraintTop_toBottomOf="@id/wind_speed"
+                android:text="Wind Speed"
+                android:textSize="16sp"
+                android:textColor="@color/offWhite"/>
+
+            <ImageView
+                android:id="@+id/clouds_image"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="@id/verticalGuideline2"
+                app:layout_constraintEnd_toEndOf="@id/verticalGuideline3"
+                android:src="@drawable/clouds"/>
+            <TextView
+                android:id="@+id/clouds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22"
+                android:textColor="@color/offWhite"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/clouds_image"
+                app:layout_constraintStart_toStartOf="@id/clouds_image"
+                app:layout_constraintEnd_toEndOf="@id/clouds_image"
+                />
+            <TextView
+                android:id="@+id/clouds_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/clouds_image"
+                app:layout_constraintEnd_toEndOf="@id/clouds_image"
+                app:layout_constraintTop_toBottomOf="@id/clouds"
+                android:text="Clouds"
+                android:textSize="16sp"
+                android:textColor="@color/offWhite"/>
+            <ImageView
+                android:id="@+id/pressure_image"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@id/verticalGuideline3"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/clouds_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:src="@drawable/pressure"/>
+            <TextView
+                android:id="@+id/pressure"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22"
+                android:textColor="@color/offWhite"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/pressure_image"
+                app:layout_constraintStart_toStartOf="@id/pressure_image"
+                app:layout_constraintEnd_toEndOf="@id/pressure_image"
+                />
+            <TextView
+                android:id="@+id/pressure_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/pressure_image"
+                app:layout_constraintEnd_toEndOf="@id/pressure_image"
+                app:layout_constraintTop_toBottomOf="@id/pressure"
+                android:text="Pressure"
+                android:textSize="16sp"
+                android:textColor="@color/offWhite"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -184,6 +430,12 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
+    <View
+        android:id="@+id/fakeView"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="-100dp"/>
 
     <ImageView
         android:id="@+id/setting"
